[gd_scene load_steps=3 format=3 uid="uid://dvt3j2ejded12"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_1x82x"]
[ext_resource type="PackedScene" uid="uid://jj76fgx27cgu" path="res://main_menu_assets/question_bubble.tscn" id="2_lih13"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_1x82x")
question_bubble = ExtResource("2_lih13")

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0.443756, 0.443759, 1)

[node name="QuizImage" type="TextureRect" parent="Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -488.0
offset_top = -383.0
offset_right = 487.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 4

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -58.0
offset_right = 99.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestionGroup" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true
